<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"

>

    <Button
            android:id="@+id/rating_text_10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rating_10"
            style="@style/DialogButton"
    >

    </Button>
    <Button
            android:id="@+id/rating_text_9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rating_9"
            style="@style/DialogButton"
    />
    <Button
            android:id="@+id/rating_text_8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rating_8"
            style="@style/DialogButton"
    />
    <Button
            android:id="@+id/rating_text_7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rating_7"
            style="@style/DialogButton"
    />
    <Button
            android:id="@+id/rating_text_6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rating_6"
            style="@style/DialogButton"
    />
    <Button
            android:id="@+id/rating_text_5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rating_5"
            style="@style/DialogButton"
    />
    <Button
            android:id="@+id/rating_text_4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rating_4"
            style="@style/DialogButton"
    />
    <Button
            android:id="@+id/rating_text_3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rating_3"
            style="@style/DialogButton"
    />
    <Button
            android:id="@+id/rating_text_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rating_2"
            style="@style/DialogButton"
    />
    <Button
            android:id="@+id/rating_text_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rating_1"
            style="@style/DialogButton"
    />
    <Button
            android:id="@+id/rating_text_no_rating"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rating_no_rating"
            style="@style/DialogButton"
    />
</LinearLayout>