<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
>
    <Button
            android:id="@+id/status_currently_watching"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/status_picker_watching"
            style="@style/DialogButton"
    />
    <Button
            android:id="@+id/status_completed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/status_picker_completed"
            style="@style/DialogButton"
    >
    </Button>
    <Button
            android:id="@+id/status_paused"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/status_picker_paused"
            style="@style/DialogButton"
    />
    <Button
            android:id="@+id/status_dropped"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/status_picker_dropped"
            style="@style/DialogButton"
    />
    <Button
            android:id="@+id/status_plan_to_watch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/status_picker_planning_to_watch"
            style="@style/DialogButton"
    />
    <Button
            android:id="@+id/status_rewatching"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/status_picker_rewatching"
            style="@style/DialogButton"
    />
    <Button
            android:visibility="gone"
            android:id="@+id/status_none"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/status_picker_none"
            style="@style/DialogButton"
    />
</LinearLayout>