<androidx.cardview.widget.CardView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        app:cardCornerRadius="@dimen/card_corner_radius"
        android:backgroundTint="@color/grayBackground"
>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingTop="20dp"
            android:paddingBottom="20dp"

    >
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/DialogButton"
                android:id="@+id/update_dialog_header"
        >

        </TextView>
        <Button
                android:id="@+id/update_now"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/update_dialog_update_now"
                style="@style/DialogButton"
        />
        <Button
                android:id="@+id/update_changelog"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/update_dialog_changelog"
                style="@style/DialogButton"
        />
        <Button
                android:id="@+id/update_never"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/update_dialog_dont_ask_again"
                style="@style/DialogButton"
        />
        <Button
                android:id="@+id/update_later"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/update_dialog_update_later"
                style="@style/DialogButton"
        />
    </LinearLayout>
</androidx.cardview.widget.CardView>
